--- a/newsfeed/src/main/resources/application.yml
+++ b/newsfeed/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/viva
+    url: jdbc:mysql://localhost:3306/${DB_SCHEMA}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: newsfeed
   config:
-    import: optional:file:.env[]
+    import: optional:file:.env[.properties]
 
   jpa:
     show-sql: true
