--- a/newsfeed/build.gradle
+++ b/newsfeed/build.gradle
@@ -33,8 +33,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // Swagger-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
+
     // PasswordEncoder
     implementation 'at.favre.lib:bcrypt:0.10.2'
+
 }
 
 tasks.named('test') {
