--- a/newsfeed/src/main/resources/application.yml
+++ b/newsfeed/src/main/resources/application.yml
@@ -18,3 +18,11 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
+
+server:
+  error:
+    include-message: always
+
+jwt:
+  secret:
+    key: ${SECRET_KEY}
