--- a/newsfeed/build.gradle
+++ b/newsfeed/build.gradle
@@ -40,6 +40,11 @@ dependencies {
     // PasswordEncoder
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
+    // JWT
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
 }
 
 tasks.named('test') {
