--- a/newsfeed/build.gradle
+++ b/newsfeed/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // PasswordEncoder
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 tasks.named('test') {
